@@ -141,17 +141,7 @@ void CGUISpriteBank::draw2DSprite(u32 index, const core::position2di& pos,
 	if (index >= Sprites.size() || Sprites[index].Frames.empty() )
 		return;
 
-	// work out frame number
-	u32 frame = 0;
-	if (Sprites[index].frameTime)
-	{
-		u32 f = ((currenttime - starttime) / Sprites[index].frameTime);
-		if (loop)
-			frame = f % Sprites[index].Frames.size();
-		else
-			frame = (f >= Sprites[index].Frames.size()) ? Sprites[index].Frames.size()-1 : f;
-	}
-
+	u32 frame = getFrameNr(index, currenttime - starttime, loop);
 	const video::ITexture* tex = getTexture(Sprites[index].Frames[frame].textureNumber);
 	if (!tex)
 		return;
@@ -161,19 +151,32 @@ void CGUISpriteBank::draw2DSprite(u32 index, const core::position2di& pos,
 		return;
 
 	const core::rect<s32>& r = Rectangles[rn];
-
+	core::position2di p(pos);
 	if (center)
 	{
-		core::position2di p = pos;
 		p -= r.getSize() / 2;
-		Driver->draw2DImage(tex, p, r, clip, color, true);
 	}
-	else
-	{
-		Driver->draw2DImage(tex, pos, r, clip, color, true);
-	}
+	Driver->draw2DImage(tex, p, r, clip, color, true);
 }
 
+void CGUISpriteBank::draw2DSprite(u32 index, const core::rect<s32>& destRect,
+		const core::rect<s32>* clip, const video::SColor * const colors,
+		u32 timeTicks, bool loop)
+{
+	if (index >= Sprites.size() || Sprites[index].Frames.empty() )
+		return;
+
+	u32 frame = getFrameNr(index, timeTicks, loop);
+	const video::ITexture* tex = getTexture(Sprites[index].Frames[frame].textureNumber);
+	if (!tex)
+		return;
+
+	const u32 rn = Sprites[index].Frames[frame].rectNumber;
+	if (rn >= Rectangles.size())
+		return;
+
+	Driver->draw2DImage(tex, destRect, Rectangles[rn], clip, colors, true);
+}
 
 void CGUISpriteBank::draw2DSpriteBatch(	const core::array<u32>& indices,
 										const core::array<core::position2di>& pos,
