@@ -51,6 +51,13 @@ public:
 				const video::SColor& color= video::SColor(255,255,255,255),
 				u32 starttime=0, u32 currenttime=0, bool loop=true, bool center=false) _IRR_OVERRIDE_;
 
+	//! Draws a sprite in 2d with destination rectangle and colors
+	virtual void draw2DSprite(u32 index, const core::rect<s32>& destRect,
+			const core::rect<s32>* clip=0,
+			const video::SColor * const colors=0,
+			u32 timeTicks = 0,
+			bool loop=true) _IRR_OVERRIDE_;
+
 	//! Draws a sprite batch in 2d using an array of positions and a color
 	virtual void draw2DSpriteBatch(const core::array<u32>& indices, const core::array<core::position2di>& pos,
 			const core::rect<s32>* clip=0,
@@ -59,6 +66,20 @@ public:
 			bool loop=true, bool center=false) _IRR_OVERRIDE_;
 
 protected:
+
+	inline u32 getFrameNr(u32 index, u32 time, bool loop) const
+	{
+		u32 frame = 0;
+		if (Sprites[index].frameTime && Sprites[index].Frames.size() )
+		{
+			u32 f = (time / Sprites[index].frameTime);
+			if (loop)
+				frame = f % Sprites[index].Frames.size();
+			else
+				frame = (f >= Sprites[index].Frames.size()) ? Sprites[index].Frames.size()-1 : f;
+		}
+		return frame;
+	}
 
 	struct SDrawBatch
 	{
